<resources>
    <string name="app_name">MyListManager</string>
    <string name="action_settings">Settings</string>
    <string name="Exit">Exit</string>
    <string name="new_item">New</string>
    <string name="search">Search</string>
    <string name="title_listitem_list">ListItems</string>
    <string name="title_listitem_detail">ListItem Detail</string>
    <string name="addItem">Details</string>
    <string name="addItemName">Name</string>
    <string name="addItemNameHint">Name for listitem</string>
    <string name="addItemDescr">Description</string>
    <string name="addItemDescrHint">Description of listitem</string>
    <string name="addItemNote">Note</string>
    <string name="addItemNoteHint">Note for listitem</string>
    <string name="addItemDate">Date</string>
    <string name="addItemTime">Time</string>
    <string name="addItemPicture">Color</string>
    <string name="addButton">Update item</string>
    <string name="addItemUrl">Url</string>
    <string name="addItemUrlHint">Url for listitem</string>
    <string name="addItemTitle">Title</string>
    <string name="addItemTitleHint">Title of listitem</string>
    <string name="addItemAutor">Autor</string>
    <string name="addItemAutorHint">Autor of listitem</string>
    <string name="addItemYear">Year</string>
    <string name="addItemYearHint">first print of listitem</string>
    <string name="addItemRating">rating</string>
    <string name="addItemRatingHint">Rating of listitem</string>
    <string name="addItemProducer">Producer</string>
    <string name="addItemProducerHint">Producer of listitem</string>
    <string name="app_label">Search</string>
    <string name="search_hint">search list items</string>
    <string name="title_activity_searchable">SearchableActivity</string>
</resources>
